[package]
name = "lib-sig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
futures = { version = "0.3.0", features = ["thread-pool"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1.11"
tokio-util = { version = "0.7.4", features = ["full"] }
hkdf = "0.12.3"
sha2 = "0.10.6"
x25519-dalek = { version = "1.2.0", features = ["serde"] }
aes-siv = "0.7.0"
hex-literal = "0.3.4"
rand_core = "0.5.1"

